--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
             <a href="contact.html" class="btn btn-light">Contact Us</a>
         </div>
     </section>
-
+    <div style="position: fixed; bottom: 20px; right: 20px; width: 350px; z-index: 1000;">
+        <iframe 
+            src="https://ftzyj5ua.chat.qbusiness.us-east-1.on.aws" 
+            style="width: 100%; height: 500px; border: none; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+        </iframe>
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Your Law Firm. All Rights Reserved.</p>
