--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div style="position: fixed; bottom: 20px; right: 20px; width: 350px; z-index: 1000;">
         <iframe 
             src="https://ftzyj5ua.chat.qbusiness.us-east-1.on.aws" 
-            style="width: 100%; height: 500px; border: none; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
+            style="width: 100%; height: 500px; border: none;">
         </iframe>
     </div>
     <!-- Footer -->
