--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div style="position: fixed; bottom: 20px; right: 20px; width: 350px; z-index: 1000;">
         <iframe 
             src="https://e3byu6em.chat.qbusiness.us-east-1.on.aws" 
-            style="width: 100%; height: 500px; border: none;">
+            style="min-width: 450px;">
         </iframe>
     </div>
     <!-- Footer -->
