--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
     <div style="position: fixed; bottom: 20px; right: 20px; width: 350px; z-index: 1000;">
         <iframe 
             src="https://e3byu6em.chat.qbusiness.us-east-1.on.aws" 
-            style="min-width: 450px;">
+            width="100%" 
+            height="500" 
+            style="border: none; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);">
         </iframe>
     </div>
     <!-- Footer -->
