--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        /* Chatbox Container */
+        #chat-container {
+            position: fixed;
+            bottom: 80px;
+            right: 20px;
+            width: 350px;
+            height: 500px;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+            display: none; /* Initially hidden */
+            overflow: hidden;
+            z-index: 1000;
+        }
+
+        /* Chatbox Iframe */
+        #chat-iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        /* Chat Toggle Button */
+        #chat-toggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 12px 15px;
+            font-size: 18px;
+            border-radius: 50px;
+            cursor: pointer;
+            z-index: 1001;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        #chat-toggle i {
+            margin-right: 5px;
+        }
+    </style>
 </head>
 <body>
     <!-- Navbar -->
@@ -65,19 +108,27 @@
             <a href="contact.html" class="btn btn-light">Contact Us</a>
         </div>
     </section>
-    <div style="position: fixed; bottom: 20px; right: 20px; width: 350px; z-index: 1000;">
-        <iframe 
-           src="https://e3byu6em.chat.qbusiness.us-east-1.on.aws" 
-        width="100%" 
-        height="100%" 
-        style="border: none; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); overflow: hidden;">
-        </iframe>
+
+    <!-- Floating Chat Button & Widget -->
+    <button id="chat-toggle"><i class="fas fa-comments"></i> Chat</button>
+
+    <div id="chat-container">
+        <iframe src="https://e3byu6em.chat.qbusiness.us-east-1.on.aws/#/chat" id="chat-iframe"></iframe>
     </div>
+
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Your Law Firm. All Rights Reserved.</p>
+        <p>&copy; 2025 Zee's Law Firm. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <script>
+        // Toggle chat visibility
+        document.getElementById("chat-toggle").addEventListener("click", function () {
+            var chatBox = document.getElementById("chat-container");
+            chatBox.style.display = (chatBox.style.display === "none" || chatBox.style.display === "") ? "block" : "none";
+        });
+    </script>
 </body>
 </html>
