--- a/index.html
+++ b/index.html
@@ -13,21 +13,26 @@
             position: fixed;
             bottom: 80px;
             right: 20px;
-            width: 350px;
+            width: 60% ;
             height: 500px;
             background: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-            display: none; /* Initially hidden */
-            overflow: hidden;
+/*             display: none; /* Initially hidden */
+            overflow: hidden; 
             z-index: 1000;
+            margin: 0 auto;
+            border:2px solid green;
+            display: flex;
+            align-items:center;
+            justify-content:center;
         }
 
         /* Chatbox Iframe */
         #chat-iframe {
             width: 100%;
             height: 100%;
-            border: none;
+            border: 2px solid red;
         }
 
         /* Chat Toggle Button */
