--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             bottom: 80px;
             right: 20px;
             width: 60% ;
-            height: 500px;
+            height: 100vh;
             background: white;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
